# pycbc

./: .codeclimate.yml  .gitignore  .landscape.yml  .pylintrc  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Doxyfile  INSTALL  MANIFEST.in  README  README.md  README.txt  build_bundle_env.sh  companion.txt  descr.rst  descr.txt  disttest.py  epydoc.config  fgmc_functions.py  fgmc_laguerre.py  gwave  install_pycbc.sh  log.py  pixi.toml  pycbc.spec  pycbc_epydoc.config  pycbc_inspiral  pyproject.toml  pytest.ini  requirements-igwn.txt  requirements.txt  ruff.toml  setup.py  setup_old.py  t.py  test.txt  testf.sh  tox.ini
.github/: pull_request_template.md
.qlty/: qlty.toml
IainCodes/: pycbc_multi_inspiral
PyCBC.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
coherent_analysis/: .strain_generator.py.swp  fstat.py  noWF_coherent_snr.py  strain_generator.py  zeros_generator.py
doc/: JUMPSTART.md  Pycbc-Refactoring-GPU-inspiral.key  Pycbc-Refactoring-GPU-inspiral.ppt  README  SPECIFICATION.md  basic-architecture-discussion.key  basic-architecture-discussion.ppt  pycbc-minimal-pipeline-graph.key  pycbc-minimal-pipeline-graph.ppt  pycbc-single-detector-graph.key  pycbc-single-detector-graph.ppt  state_of_work-9_27_11.numbers
docs/: .gitignore  Makefile  Makefile.gh_pages  Makefile.std  ahope.rst  apps.rst  banksim.rst  build_gh_pages.rst  building_bundled_executables.rst  calibration.rst  catalog.rst  conf.py  conf_std.py  conf_test.py  credit.rst  cuda_install.rst  dataquality.rst  detector.rst  devs.rst  distributions.rst  docker.rst  documentation.rst  executables.rst  faithsim.rst  fft.rst  filter.rst  frame.rst  gw150914.rst  hwinj.rst  ihope.rst  index.rst  inference.rst  install.rst  install_cuda.rst  install_lalsuite.rst  install_virtualenv.rst  manipulating_frame_files.rst  mock_data_generation.rst  opencl_install.rst  psd.rst  (+17 more)
doxygen/: doxygen-html.cfg
etc/: build-docker.sh  docker-install.sh
examples/: match_waveform.py  overlap.py  plot_fd_td.py  plot_waveform.py  variable_noise.py
ext_mods/: Makefile  environ.sh  laltypemaps.i  new-test.py  setup.py  testlal.i
include/: .gitignore  SI.h  lal.i  lalswig.i  laltypemaps.i  lalwrap.i  pycbc.h  pycbc.i  pycbc_laltypes.i  testlalwrap.i
lib/: bandpassfilter.py  chisqveto.py  injector.py  matchedfilter.py  resampler.py  singledetectorevent.py  spectrum.py  straindata.py  taylorf2template.py  templatebank.py
pycbc/: .gitignore  LISA_detector.py  __init__.py  _version.py  _version_helper.py  array.py  bandpassfilter.py  base.py  bin_utils.py  boundaries.py  chisqveto.py  constants.py  conversions.py  coordinates.py  coordinates_space.py  cosmology.py  cpu.py  datavecstim_opencl.py  datavecterm_cpu.py  derived_parameters.py  detector.py  dq.py  dqutils.py  frame.py  frequencyseries.py  full_version.py  future.py  gate.py  gates.py  highpassfilter.py  injcutter.py  inject.py  injector.py  libutils.py  mchirp_area.py  mchirp_area_improved.py  neutron_stars.py  opencl.py  opt.py  pnutils.py  (+23 more)
q-transform/: deltam.py  main.py
scripts/: banksim.py  faith.py
src/: types.c
test/: array_base.py  (+65 more)
(+2672 files in other folders)
