[build-system]
requires = ["setuptools",
            "wheel",
            "cython>=0.29.21",
            "oldest-supported-numpy",
            ]

# To ensure the best compatibility, try to match the numpy reqs
# where possible to the following used by scipy and the minimum
# of our normal numpy requirements in setup.py
# https://github.com/scipy/oldest-supported-numpy/blob/master/setup.cfg
